samples/_failures_safe/1761318136_6fc4e4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_58e53df2.c: In function ‘main’:
./samples/SAFE/__tmp_58e53df2.c:167:5: error: expected expression at end of input
  167 |     if (
      |     ^~
./samples/SAFE/__tmp_58e53df2.c:167:5: error: expected declaration or statement at end of input
